--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: MonkeyBlog
 subtitle: ''
 description: 'There is only one heroism in the world'
 keywords:
-author: Haodi Lei
+author: Haodi Lei(雷皓迪)
 language: en
 timezone: ''
 
