--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: MonkeyBlog
 subtitle: ''
-description: 'There is only one heroism in the world'
+description: 'We must know. We will know.'
 keywords:
 author: Haodi Lei(雷皓迪)
 language: en
