--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hexo-generator-search": "^2.4.3",
     "hexo-generator-searchdb": "^1.4.1",
     "hexo-generator-tag": "^2.0.0",
+    "hexo-next-giscus": "^1.3.0",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^7.0.0",
     "hexo-renderer-stylus": "^3.0.1",
